[package]
name = "verkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12.0"
group = "0.12.0"
halo2_proofs = "0.2.0"
neptune = { version = "7.2.0", optional = true }
sha2 = "0.10.3"
typenum = { version = "1.15.0", optional = true }

[features]
bench = ["neptune", "typenum"]
